--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ p.about-perfume {
     font-family: 'Montserrat', sans-serif;
     color: var(--dark-grayish-blue);
     font-weight: 500;
+    text-decoration: line-through;
 }
 
 button {
