--- a/styles.css
+++ b/styles.css
@@ -1,224 +1,84 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-:root{
-    /* Primary Colors */
-    --dark-cyan: hsl(158, 36%, 37%);
-    --cream: hsl(30, 38%, 92%);
-
-    /* Netural Colors */
-    --very-dark-blue: hsl(212, 21%, 14%);
-    --dark-grayish-blue: hsl(228, 12%, 48%);
-    --white: hsl(0, 0%, 100%);
-    --dark-blue: hsl(180, 100%, 18.65%);
+body {
+  background-color: hsl(30, 38%, 92%) !important;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
-body{
-    font-family: "Montserrat", sans-serif;
-    background-color: var(--cream);
-    margin-top: 110px;
+.container {
+  max-width: 900px;
+  width: 100%;
 }
-
-main {
-    display: flex; 
-    flex-direction: row; 
-    align-items: flex-start; 
-    width: 680px;
-    background-color: var(--white);
-    border-radius: 15px;
-    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.3);
-    margin: 30px auto; 
-    overflow: hidden;
-    min-height: 400px; 
+.container .product-card {
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 1.1rem;
+  overflow: hidden;
+  margin: 100px auto 10px auto;
 }
-
-.image-section .responsive-image {
-    width: 130%;
-    height: auto;
-    display: block;
+.container .product-card .image-section {
+  flex: 1.1;
 }
-
-.description-section {
-    line-height: 35px;
-    position: relative;
-    left: 18%;
-    margin-top: 5%;
+.container .product-card .image-section picture img {
+  width: 100%;
+  height: auto;
 }
-
-.description-section .category{
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    color: var(--dark-grayish-blue);
-    font-weight: 500;
-    position: relative;
-    top: 12px;
-    font-size: 14px;
+.container .product-card .content-section {
+  flex: 1;
 }
-
-.perfume-name {
-    font-family: "Fraunces", serif;
-    font-size: 2.2rem;
-    line-height: 1.05;
-    overflow: hidden;
-    width: 60%;
-    margin-top: 24px;
-    color: var(--very-dark-blue);
+.container .product-card .content-section .category {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  color: hsl(228, 12%, 48%);
+  letter-spacing: 5px;
 }
-
-p.about-perfume {
-    width: 65%;
-    color: var(--dark-grayish-blue);
-    font-weight: 500;
-    line-height: 1.6;
-    position: relative;
-    top: 20px;
-    font-size: 15px;
-    font-family: 'Montserrat', sans-serif;
+.container .product-card .content-section .product-title {
+  font-family: "Fraunces", serif;
+  font-size: 3.4rem;
+  font-weight: 700;
+  color: hsl(212, 21%, 14%);
+  line-height: 1;
 }
-
-.price {
-    display: flex;
-    gap: 1.4rem;
-    align-items: center;
-    position: relative;
-    top: 60px;
+.container .product-card .content-section .product-description {
+  font-size: 1.2rem;
+  color: hsl(228, 12%, 48%);
 }
-
-.new-price {
-    font-size: 2.5rem;
-    color: var(--dark-cyan);
-    position: relative;
-    font-family: 'Fraunces', serif;
-    font-weight: 700;
+.container .product-card .content-section .price-wrapper .current-price {
+  font-family: "Fraunces", serif;
+  font-size: 2.8rem;
+  color: hsl(158, 36%, 37%);
 }
-
-.old-price {
-    font-family: 'Montserrat', sans-serif;
-    color: var(--dark-grayish-blue);
-    font-weight: 500;
-    text-decoration: line-through;
+.container .product-card .content-section .price-wrapper .original-price {
+  font-size: 1rem;
+  color: hsl(228, 12%, 48%);
+  margin-left: 15px;
 }
-
-button {
-    background-color: var(--dark-cyan);
-    color: var(--white);
-    border: none;
-    border-radius: 10px;
-    padding: 15px 60px;
-    font-size: 1em;
-    font-family: 'Montserrat', sans-serif;
-    display: flex;
-    align-items: center;
-    gap: 18px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-weight: 700;
-    top: 105px;
-    position: relative;
+.container .product-card .content-section .btn-add-to-cart {
+  background-color: hsl(158, 36%, 37%);
+  color: hsl(0, 0%, 100%);
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+  border: none;
+  border-radius: 10px;
+  transition: all 0.3s ease;
 }
-
-button:hover {
-    background-color: var(--dark-blue); 
-    transform: scale(1.05); 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); 
+.container .product-card .content-section .btn-add-to-cart:hover {
+  background-color: hsl(180, 100%, 18.65%);
+  transform: scale(1.05);
+  box-shadow: 0 4px 14px #005555;
 }
 
 footer {
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: medium;
+  color: hsl(212, 21%, 14%);
 }
-
-footer a {
-    text-decoration: none;
-    font-style: italic;
-    font-family: 'Fraunces', serif;
-    cursor: pointer;
-}
-
-@media (max-width: 768px){
-    main{
-        flex-direction: column;
-        min-height: auto;
-        width: 90%;
-        margin-top: -10%;
-    }
-
-    .image-section .responsive-image{
-        content: url(images/image-product-mobile.jpg);
-        width: 101%;
-        height: auto;
-    }
-
-    .description-section {
-        left: 0;
-        margin-top: 20px;
-        width: 100%;
-        padding: 0 30px 80px;
-    }
-
-    .description-section .category {
-        font-size: 16px;
-        letter-spacing: 3px;
-    }
-
-    .perfume-name {
-        font-size: 2.25rem;
-        width: 100%;
-        margin-top: 22px;
-    }
-
-    p.about-perfume {
-        width: 100%; 
-        font-size: 16px; 
-        margin-top: 8px; 
-    }
-
-    .price {
-        gap: 1.8rem;
-        top: 55px;
-    }
-
-    .old-price{
-        font-size: 18px;
-        margin-top: -6px;
-    }
-
-    button {
-        font-size: 1em;
-        gap: 12px;
-        width: 100%;
-        margin-top: -15px;
-        margin-bottom: 45px;
-        justify-content: center;
-    }
-
-    button img {
-        height: 25px;
-        width: 25px;
-    }
-
-    button span {
-        font-size: 18px;
-    }
-
-    footer{
-        margin-bottom: 10px;
-    }
-}
-
-@media (max-width: 361px){
-
-    button span {
-        font-size: 1em;
-    }
-
-}
+footer a,
+footer a:visited {
+  font-family: "Fraunces", serif;
+  color: hsl(180, 100%, 18.65%);
+}/*# sourceMappingURL=styles.css.map */
